fixed edge-case with about page scrollbar: now resets to top item when navigated away from page

--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ span:hover {
 */
 
 #about {
-    padding-top: 10rem;
+    /* padding-top: 10rem; */
 }
 
 .scroll-box {
@@ -252,5 +252,5 @@ span:hover {
 
 #about > .content {
     margin-left: 3.5rem;
-    padding: 0 3rem;
+    padding: 10rem 3rem 0rem 3rem;
 }
